# ROS2-Jazzy-Lab

./: .clangd  .gitignore  README.md  executors_notes.md  notes.md  ros2_roadmap.md
.antigravity/: ANTIGRAVITY_RULES.md  README.md  c_cpp_properties.json  launch.json  settings.json  tasks.json
.antigravity/knowledge/workspace_config/: metadata.json
.antigravity/knowledge/workspace_config/artifacts/: workspace_summary.md
notes/: 3d_model_and_controllers.md  ros2_control_and_model_launch_guide.md  ros2_control_guide.md  tf2_notes.md  turtle_follower_notes.md  urdf_notes.md
roadmaps/: cpp_memory_management.md  robotics_cpp_mastery.md  ros2_roadmap.md
src/Odometry&Control/bumperbot_description/: package.xml
src/Odometry_and_Control/bumperbot_controllers/: CMakeLists.txt  package.xml
src/Odometry_and_Control/bumperbot_controllers/config/: bumperbot_controllers.yaml
src/Odometry_and_Control/bumperbot_controllers/launch/: controllers.launch.py
src/Odometry_and_Control/bumperbot_description/: CMakeLists.txt  bumperbot.config  package.xml
src/Odometry_and_Control/bumperbot_description/launch/: display.launch.py  gazebo.launch.py
src/Odometry_and_Control/bumperbot_description/meshes/: actuatordc_left.gltf  actuatordc_left.stl  actuatordc_right.gltf  actuatordc_right.stl  caster_ball.gltf  caster_ball.stl  caster_frame.gltf  caster_frame.stl  caster_front_link.gltf  caster_rear_link.gltf  hexcoupler_l.gltf  hexcoupler_l.stl  hexcoupler_r.gltf  hexcoupler_r.stl  imu_link.gltf  l298n.gltf  motor_bracket_left.gltf  motor_bracket_left.stl  motor_bracket_right.gltf  motor_bracket_right.stl  rim_l.gltf  rim_l.stl  rim_r.gltf  rim_r.stl  spacer_hex.gltf  spacer_hex.stl  tire_l.stl  wheel_left_link.gltf  wheel_right_link.gltf
src/Odometry_and_Control/bumperbot_description/rviz/: display.rviz
src/Odometry_and_Control/bumperbot_description/urdf/: bumperbot.urdf.xacro
src/gazebo_sim/gazebo_core/core_algorithms/: CMakeLists.txt  package.xml
src/gazebo_sim/gazebo_core/core_description/: CMakeLists.txt  inverted_pendulum.config  motor_testbench.config  package.xml
src/gazebo_sim/gazebo_core/core_gazebo/: CMakeLists.txt  package.xml
src/learning_ros2/actions/: CMakeLists.txt  package.xml
src/learning_ros2/actions/actions/: action_client.py  action_server.py
src/learning_ros2/actions/flowcharts/: action_server_flow.drawio
src/learning_ros2/actions/src/: action_server.cpp  action_server_preemption.cpp
src/learning_ros2/executors/: CMakeLists.txt  package.xml
src/learning_ros2/executors/executors/: py_hybrid_group.py  py_reentrant_group.py  py_single_threaded_executor.py
src/learning_ros2/executors/src/: cpp_multi_threaded_executor.cpp  cpp_reentrant_group.cpp
src/learning_ros2/launch_file/: CMakeLists.txt  package.xml
src/learning_ros2/launch_file/launch/: talker_listener_complex.launch.py  talker_listener_launchInclude.launch.py
src/learning_ros2/parameters/: CMakeLists.txt
src/learning_ros2/parameters/config/: param_config.yaml
src/learning_ros2/parameters/parameters/: py_parameters_event_driven.py  py_parameters_from_config.py  py_parameters_polling.py
src/learning_ros2/parameters/src/: cpp_parameters_event_driven.cpp  cpp_parameters_polling.cpp
src/learning_ros2/ros2_interfaces/: CMakeLists.txt  package.xml
src/learning_ros2/ros2_interfaces/srv/: Greetings.srv  Trigger.srv
src/learning_ros2/ros2_playground/: CMakeLists.txt  package.xml
src/learning_ros2/ros2_playground/config/: turtle_config.yaml
src/learning_ros2/ros2_playground/flowchart/: turtle_go_to_goal_flow.drawio
src/learning_ros2/ros2_playground/ros2_playground/: turtle_go_to_goal_action_client.py
src/learning_ros2/ros2_playground/src/: server.cpp  turtle_go_to_goal_topics.cpp
src/learning_ros2/services/: CMakeLists.txt
src/learning_ros2/services/flowcharts/: cpp_client.drawio
src/learning_ros2/services/services/: py_minimal_server.py
src/learning_ros2/topics/: CMakeLists.txt
src/learning_ros2/topics/src/: cpp_minimal_publisher.cpp  cpp_minimal_subscriber.cpp
src/learning_ros2/topics/topics/: py_minimal_publisher.py  py_minimal_subscriber.py
src/odometry_and_control/bumperbot_description/: CMakeLists.txt
src/odometry_and_control/bumperbot_description/urdf/: bumperbot.urdf.xacro
src/ros2_core/actions/: CMakeLists.txt
src/ros2_core/actions/actions/: action_server.py
src/ros2_core/actions/src/: action_server.cpp  action_server_preemption.cpp
src/ros2_core/executors/executors/: py_hybrid_group.py  py_multi_threaded_executor.py  py_multi_threaded_groups.py
src/ros2_core/executors/src/: cpp_hybrid_group.cpp  cpp_multi_threaded_groups.cpp  cpp_single_threaded_executor.cpp
src/ros2_core/launch_file/: CMakeLists.txt  package.xml
src/ros2_core/launch_file/launch/: parameters_config.launch.py  talker_listener.launch.py
src/ros2_core/parameters/: package.xml
src/ros2_core/parameters/parameters/: py_parameters_from_config.py  py_parameters_polling.py
src/ros2_core/parameters/src/: cpp_parameters_from_config.cpp
src/ros2_core/ros2_interfaces/: CMakeLists.txt
src/ros2_core/ros2_interfaces/action/: GoToGoal.action
src/ros2_core/ros2_playground/: CMakeLists.txt  package.xml
src/ros2_core/ros2_playground/flowchart/: turtle_go_to_goal_action_client.drawio
src/ros2_core/ros2_playground/launch/: turtle_tf2_cpp_demo.launch.py  turtle_tf2_demo.launch.py
src/ros2_core/ros2_playground/src/: serviceServer.cpp  (+6 more)
src/ros2_core/ros2_utilities/: package.xml  setup.cfg  setup.py
src/ros2_core/tf2_pkg/: CMakeLists.txt  package.xml
src/ros2_core/tf2_pkg/launch/: cpp_dynamic_tf2.launch.py  py_data_transformer.launch.py  py_dynamic_tf2.launch.py
src/ros2_core/tf2_pkg/rviz/: rviz_config.rviz  rviz_config_2.rviz
src/ros2_core/tf2_pkg/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf2_data_transformer.cpp  tf2_listener.cpp
src/ros2_core/tf2_pkg/tf2_pkg/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf2_data_transformer.py  tf2_listener.py
src/ros2_core/tf2_pkg/urdf/: dynamic_tf.urdf.xacro
src/ros2_core/topics/: package.xml
(+77 files in other folders)
